--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="styles.css" />
 		<script src="index.js"></script>
 	</head>
 	<body>
-
+		<div class="container">
+			<div class="player-box">
+				<p>Choose Your Weapon</p>
+				<button class="rock-button">Rock</button>
+				<button class="paper-button">Paper</button>
+				<button class="scissors-button">Scissors</button>
+			</div>
+		</div>
 	</body>
 </html>
