--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 				<button class="paper-button">Paper</button>
 				<button class="scissors-button">Scissors</button>
 			</div>
+
+			<div class="results-window">
+				<p>Player:</p>
+				<p>Computer:</p>
+				<p>Results</p>
+			</div>
 		</div>
 		<script src="index.js"></script>
 	</body>
